--- a/club.html
+++ b/club.html
@@ -7,7 +7,13 @@
     <title>PINK!_Liberec-nabor</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-
+    <script type="text/javascript">
+      (function(c,l,a,r,i,t,y){
+          c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+          t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+          y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+      })(window, document, "clarity", "script", "rnzfkjf18w");
+  </script>
     <link rel="icon" type="image/png" sizes="32x32" href="/2024-p2a-web-volnyprojekt-LukasVedral-public/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/2024-p2a-web-volnyprojekt-LukasVedral-public/favicon-16x16.png">
     <script type="module" crossorigin src="/2024-p2a-web-volnyprojekt-LukasVedral-public/assets/modulepreload-polyfill-B5Qt9EMX.js"></script>
